# buzzer_rs

./: Cargo.toml
src/: main.rs
static/css/: lobby.css  session.css
static/js/: lobby.js  session.js
templates/: index.html  session.html
