[package]
name = "buzzer_rs"
version = "0.1.0"
authors = ["FlatBartender"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-files = "0.4"
actix-web = "3.1"
actix-web-actors = "3.0"
serde = "1.0"
serde_json = "1.0"
serde_repr = "0.1"
tera = "1"
rand = "0.7"
log = "0.4"
pretty_env_logger = "0.4"
